fix(EV-11832): question content clipped issue (#7646)
* fix(EV-11832): question content cliped issue

* fix(EV-11832): add padding in stimulus

--- a/src/client/index.css
+++ b/src/client/index.css
@@ -1189,10 +1189,6 @@ textinput::before {
   margin: 0;
 }
 
-p {
-  margin: 0;
-}
-
 #mainQuill > .ql-container.ql-snow {
   margin: 0 !important;
   padding: 15px !important;
